Fixed the problem where icons would shift vertically every time the p tag would become visible upon resizing the window

--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -1,5 +1,6 @@
 .ig-icon {
-  margin-bottom: 40px;
+ padding-top: 50px;
+  margin-bottom: 60px;
 }
 
 nav {
@@ -8,35 +9,30 @@ nav {
   position: fixed;
   left: 0;
   top: 0;
-  border-right: 1px grey solid;
+  border-right: 1px rgba(128, 128, 128, 0.339) solid;
   color: white;
-  padding-right: 10px;
   width: 250px;
 }
 
 ul {
   display: flex;
   flex-direction: column;
-
   list-style-type: none;
-  
-  
 }
 
 li {
   display: flex;
   align-items: center;
  
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   width: 100%;
+  height: 70px;
 }
 
 p {
   display: block;
   margin-left: 15px;
 }
-
-
 
 li:hover {
   background-color: #111;
@@ -49,11 +45,11 @@ li:hover {
 @media (max-width: 1280px) {
   nav {
     width: 100px;
-
   }
 
   li {
-    margin-bottom: 57px;
+ 
+    justify-content: space-between; /* add this */
   }
 
   p {
